# Shuriken

./: .gitignore  Aurora.sln  CMakeLists.txt  Environment.txt
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
Core/src/: Aurora.h
Core/src/aurora/: AList.h  Application.cpp  Application.h  Args.h  Aurora.h  ByteArray.cpp  ByteArray.h  Config.h  Core.h  Debug.h  DynamicLib.cpp  DynamicLib.h  GUID.h  Global.h  GraphicsBuffer.cpp  GraphicsBuffer.h  Image.cpp  Image.h  Intrusive.h  Lock.h  Looper.cpp  Looper.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshResource.cpp  MeshResource.h  Monitor.cpp  Monitor.h  Node.cpp  Node.h  ProgramSource.cpp  ProgramSource.h  RTTI.h  Ref.h  ScopeGuard.h  ScopePtr.h  SerializableObject.cpp  SerializableObject.h  (+16 more)
Core/src/aurora/components/: Camera.cpp  Camera.h  IComponent.cpp  IComponent.h  IRenderable.cpp  IRenderable.h  RenderableMesh.cpp  RenderableMesh.h
Core/src/aurora/events/: EventDispatcher.h  IEventDispatcher.h
Core/src/aurora/hash/: CRC.h  MD5.cpp  MD5.h  xxHash.h
Core/src/aurora/lockfree/: LinkedQueue.h
Core/src/aurora/math/: Box.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Matrix34.inl  Matrix44.inl  Quaternion.cpp  Quaternion.h  Vector.h
Core/src/aurora/modules/: IModule.h  ModuleLoader.h
Core/src/aurora/predefine/: Architecture.h  Compiler.h  Endian.h  Hardware.h  OS.h
Core/src/aurora/render/: ForwardRenderer.cpp  ForwardRenderer.h  IRenderCollector.h  IRenderDataCollector.h  IRenderPipeline.h  IRenderer.h  RenderData.h  RenderEnvironment.h  RenderPass.h  RenderPriority.h  RenderState.h  RenderTag.h  SpriteRenderer.cpp  SpriteRenderer.h  StandardRenderPipeline.cpp  StandardRenderPipeline.h
Core/src/aurora/renderers/: IRenderEntry.h  IRenderPipeline.h  StandardRenderPipeline.cpp  StandardRenderPipeline.h
Core/src/base/: Application.cpp  Application.h  Args.h  ByteArray.cpp  ByteArray.h  ByteArray.inl  DynamicLib.cpp  DynamicLib.h  GLobal.h  GUID.h  Image.cpp  Image.h  Lock.h  LowLevel.h  Monitor.cpp  Monitor.h  Ref.h  STList.h  SerializableObject.cpp  SerializableObject.h  String.cpp  String.h  Time.h  TimeWheel.cpp  TimeWheel.h
Core/src/events/: EventDispatcher.h  IEventDispatcher.h
Core/src/math/: Box.h  Math.cpp  Math.h  Math.inl  Matrix34.cpp  Matrix34.h  Matrix34.inl  Matrix44.cpp  Matrix44.h  Matrix44.inl  Quaternion.cpp  Quaternion.h  Quaternion.inl  Vector.h
Core/src/modules/: IModule.h  ModuleLoader.h
Core/src/modules/graphics/: ConstantBufferManager.cpp  ConstantBufferManager.h  GraphicsAdapter.cpp  GraphicsAdapter.h  GraphicsUtils.cpp  GraphicsUtils.h  IGraphicsModule.cpp  IGraphicsModule.h  IProgramSourceTranslator.h  ProgramSource.cpp  ProgramSource.h  ShaderParameter.h  ShaderParameterFactory.cpp  ShaderParameterFactory.h
Core/src/modules/inputs/: DeviceInfo.cpp  DeviceInfo.h  GUID.cpp  GUID.h  IInputModule.h
Core/src/nodes/: Node.cpp  Node.h  Node.inl
Core/src/srk/: Application.cpp  Application.h  Bit.h  ByteArray.cpp  ByteArray.h  Concepts.h  Config.h  Core.h  Debug.cpp  Debug.h  DynamicLib.cpp  DynamicLib.h  DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  EnumOperators.h  GUID.h  Global.h  Intrusive.h  Literals.h  Lock.h  Memory.cpp  Memory.h  Printer.cpp  Printer.h  RTTI.h  ScopeGuard.h  ScopePtr.h  SerializableObject.cpp  SerializableObject.h  StackPopper.h  Std.h  String.cpp  String.h  StringUtility.cpp  StringUtility.h  TaggedPtr.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  (+6 more)
Extensions/ASTCConverter/: CMakeLists.txt
Extensions/FBXConverter/: CMakeLists.txt
Extensions/HID/: CMakeLists.txt
Extensions/PNGConverter/: CMakeLists.txt
Extensions/ShaderScript/: CMakeLists.txt
Extensions/ShaderTranspiler/: CMakeLists.txt
Framework/: CMakeLists.txt
Framework/src/aurora/: Application.cpp  Application.h  ApplicationLinux.cpp  ApplicationLinux.h  ApplicationWindows.cpp  ApplicationWindows.h  Framework.h  GraphicsBuffer.cpp  GraphicsBuffer.h  IApplication.h  Image.cpp  Image.h  Looper.cpp  Looper.h  Material.h  Mesh.cpp  Mesh.h  MeshResource.h  Monitor.cpp  Monitor.h  Node.cpp  Node.h  ProgramSource.cpp  ProgramSource.h  Shader.cpp  Shader.h  ShaderDefine.cpp  ShaderDefine.h  ShaderParameter.cpp  ShaderParameter.h  ShaderPredefine.h
Framework/src/srk/: Application.cpp  Application.h  ApplicationLinux.cpp  ApplicationLinux.h  ApplicationWindows.cpp  ApplicationWindows.h  Framework.h  GraphicsBuffer.cpp  GraphicsBuffer.h  IApplication.h  Image.cpp  Image.h  Looper.cpp  Looper.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Monitor.cpp  Monitor.h  Node.cpp  Node.h  ProgramSource.cpp  ProgramSource.h  SceneNode.cpp  SceneNode.h  Shader.cpp  Shader.h  ShaderDefine.cpp  ShaderDefine.h  ShaderParameter.cpp  ShaderParameter.h  ShaderPredefine.h
Modules/Graphics/Direct3D11/: CMakeLists.txt
Modules/Graphics/OpenGL/: CMakeLists.txt
Modules/Graphics/ProgramSourceTranslator/: CMakeLists.txt  ProgramSourceTranslator.vcxproj  ProgramSourceTranslator.vcxproj.filters
Modules/Graphics/ShaderTranspiler/: CMakeLists.txt
Modules/Graphics/Vulkan/: CMakeLists.txt
Modules/Graphics/WinD3D11/: CMakeLists.txt  WinD3D11.vcxproj  WinD3D11.vcxproj.filters
Modules/Graphics/WinGL/: CMakeLists.txt  WinGL.vcxproj  WinGL.vcxproj.filters
Modules/Graphics/WinGlew/: CMakeLists.txt  WinGlew.vcxproj  WinGlew.vcxproj.filters
Modules/Inputs/DirectInput/: CMakeLists.txt
Modules/Inputs/HIDInput/: CMakeLists.txt
Modules/Inputs/WinDirectInput/: CMakeLists.txt  WinDirectInput.vcxproj  WinDirectInput.vcxproj.filters
Modules/Inputs/XInput/: CMakeLists.txt
Modules/Windows/AndroidNative/: CMakeLists.txt
Test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters
Test/src/: AndroidApp.cpp  AndroidApp.h  BaseTester.cpp  BaseTester.h  Entry.cpp  Entry.h  Experiment.h  Helper.h  Main.cpp  Main.mm  Test.cpp  experiment.h  statical.h
Test/src/tests/: CompressTextureTester.h  DepthTestTester.h  ExperimentTester.h  GraphicsAdapterTester.h  GraphicsTester.h  InputTester.h  LockfreeTester.h  OffscreenTester.h  RenderPipelineTester.h  RenderTargetTester.h  VertexUpdateTester.h  WindowTester.h
(+1172 files in other folders)
